Fix stock table header alignment

--- a/src/renderer/styles.css
+++ b/src/renderer/styles.css
@@ -182,9 +182,15 @@ td {
 }
 
 th:first-child,
-td:first-child,
-th:nth-child(2) {
+td:first-child {
   text-align: left;
+}
+
+th:nth-child(7),
+td:nth-child(7),
+th:nth-child(9),
+td:nth-child(9) {
+  text-align: center;
 }
 
 th {
